# Stratagem-UCI-Chess-Engine

./: CMakeLists.txt  README.md  makefile  makefile.bak
src/: attack.cpp  attack.h  benchmark.cpp  benchmark.h  board.cpp  board.h  choose.cpp  choose.h  data.cpp  data.h  evaluate.cpp  evaluate.h  hashkey.cpp  hashkey.h  heuristics.cpp  heuristics.h  init.cpp  init.h  io.cpp  io.h  magic.cpp  magic.h  main.cpp  makemove.cpp  makemove.h  miscellaneous.cpp  miscellaneous.h  move.cpp  move.h  movegen.cpp  movegen.h  nnue.cpp  nnue.h  perft.cpp  perft.h  random.cpp  random.h  search.cpp  search.cpp.bak  search.h  (+11 more)
